2008-03-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (Tcl_ExprObj):   Revised expression bytecode
	compiling so that bytecodes invalid due to changing context or due
	to the difference between expressions and scripts are not reused.
	[Bug 1899164].

	* generic/tclTest.c:	Backport the [testexprlongobj] testing command.

	* tests/execute.test (execute-6.8):	Added tests checking that
	bytecode is invalidates in the right situations.

2008-03-03  Reinhard Max  <max@suse.de>

	* unix/tclUnixChan.c: Fix mark and space parity on Linux, which
	uses CMSPAR instead of PAREXT.

2008-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/pkgIndex.tcl: Backported 2.5.5 changes from
	* library/http/http.tcl:     8.5 version.
	* doc/http.n:                Document the meta accessor.

2008-02-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOCmd.c (Tcl_GetsObjCmd): do not reuse resultObj as
	it may be shared (crash condition).

2008-02-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/pkgIndex.tcl: Set version 2.5.4
	* library/http/http.tcl:     Fix for bug #1818565. Always check that
	the state array exists in the http::status command.

2008-02-06  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.18 TAGGED FOR RELEASE ***

	* README:		Bump version number to 8.4.18
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* changes:		updates for 8.4.18 release.

2008-02-02  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in (Darwin):	correct Info.plist year substitution in
					non-framework builds.

	* unix/configure:		autoconf-2.13

2008-01-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInterp.c (Tcl_GetAlias): fix for [Bug 1882373]

2008-01-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinSerial.c (SerialCloseProc, TclWinOpenSerialChannel):